--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
   <div id="toc" style="min-width: 5em;">
     <ol>
       <li>
-        <a href="#overview" raw="# Overview" lo="1" class="highlighted">
+        <a href="#overview" raw="# Overview" lo="1">
           <span class="toctext">Overview</span>
         </a>
       </li>
@@ -692,7 +692,7 @@ c-16-25.333-24-45-24-59z"></path>
             </a>
           </li>
           <li>
-            <a href="#magnetic-field-of-a-moving-charge" raw="## Magnetic Field of a Moving Charge" lo="398">
+            <a href="#magnetic-field-of-a-moving-charge" raw="## Magnetic Field of a Moving Charge" lo="398" class="highlighted">
               <span class="toctext">Magnetic Field of a Moving Charge</span>
             </a>
           </li>
@@ -702,22 +702,17 @@ c-16-25.333-24-45-24-59z"></path>
             </a>
           </li>
           <li>
-            <a href="#magnetic-flux" raw="## Magnetic Flux" lo="414">
+            <a href="#magnetic-flux" raw="## Magnetic Flux" lo="414" class="">
               <span class="toctext">Magnetic Flux</span>
             </a>
           </li>
           <li>
-            <a href="#magnetic-field-of-a-moving-charge" raw="## Magnetic Field of a Moving Charge" lo="416" class="">
-              <span class="toctext">Magnetic Field of a Moving Charge</span>
-            </a>
-          </li>
-          <li>
-            <a href="#lenz-s-law" raw="## Lenz's Law" lo="430">
+            <a href="#lenz-s-law" raw="## Lenz's Law" lo="428">
               <span class="toctext">Lenz’s Law</span>
             </a>
           </li>
           <li>
-            <a href="#rlc-and-ac-circuits" raw="## RLC and AC Circuits" lo="432">
+            <a href="#rlc-and-ac-circuits" raw="## RLC and AC Circuits" lo="430">
               <span class="toctext">RLC and AC Circuits</span>
             </a>
           </li>
@@ -730,7 +725,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="1" lf="1" class="highlighted"><a name="overview" number="1" lo="1" raw="# Overview" class="anchor hanchor" href="#overview"><span class="hnumber">1</span>&nbsp;<span class="htext">Overview</span></a></h1>
+        <h1 lo="1" lf="1"><a name="overview" number="1" lo="1" raw="# Overview" class="anchor hanchor" href="#overview"><span class="hnumber">1</span>&nbsp;<span class="htext">Overview</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">1</span></div>
       </div>
       <div class="block">
@@ -742,7 +737,7 @@ c-16-25.333-24-45-24-59z"></path>
         <div class="block-info" style="display: none;"><span class="line-numbers">5</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="7" lf="7" class="">These activities were written in collaboration with Jessica Rosenberg over four semesters. The tutorials were revised from semester to semester based on observations made while using them. Robb Oerter, Gunnar Schwertfeger, Patrick Vora, Joe Weingartner, and Michael Reefe have contributed edits, video solutions, or links to resources.</p>
+        <p padlength="0" lo="7" lf="7">These activities were written in collaboration with Jessica Rosenberg over four semesters. The tutorials were revised from semester to semester based on observations made while using them. Robb Oerter, Gunnar Schwertfeger, Patrick Vora, Joe Weingartner, and Michael Reefe have contributed edits, video solutions, or links to resources.</p>
         <div class="block-info" style="display: none;"><span class="line-numbers">7</span></div>
       </div>
       <div class="block">
@@ -750,7 +745,7 @@ c-16-25.333-24-45-24-59z"></path>
         <div class="block-info" style="display: none;"><span class="line-numbers">9</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="11" lf="11" class="active">The problems on these activities are generally basic and straightforward. The problems chosen and their difficulty are based on observations when helping students solve activity and homework problems. (Initial drafts of these activities were medium-difficulty homework-level problems and were revised when we understood which mathematical concepts they needed to master in order to understand how to approach the homework problems.)</p>
+        <p padlength="0" lo="11" lf="11">The problems on these activities are generally basic and straightforward. The problems chosen and their difficulty are based on observations when helping students solve activity and homework problems. (Initial drafts of these activities were medium-difficulty homework-level problems and were revised when we understood which mathematical concepts they needed to master in order to understand how to approach the homework problems.)</p>
         <div class="block-info" style="display: none;"><span class="line-numbers">11</span></div>
       </div>
       <div class="block">
@@ -1954,21 +1949,21 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="398" lf="398"><a name="magnetic-field-of-a-moving-charge" number="4.21" lo="398" raw="## Magnetic Field of a Moving Charge" class="anchor hanchor" href="#magnetic-field-of-a-moving-charge"><span class="hnumber">4.21</span>&nbsp;<span class="htext">Magnetic Field of a Moving Charge</span></a></h2>
+        <h2 lo="398" lf="398" class="highlighted"><a name="magnetic-field-of-a-moving-charge" number="4.21" lo="398" raw="## Magnetic Field of a Moving Charge" class="anchor hanchor" href="#magnetic-field-of-a-moving-charge"><span class="hnumber">4.21</span>&nbsp;<span class="htext">Magnetic Field of a Moving Charge</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">398</span></div>
       </div>
       <div class="block">
         <ul lo="400" lf="410" class="compact">
-          <li markerlength="2" padlength="0" lo="400" lf="405">
+          <li markerlength="2" padlength="0" lo="400" lf="405" class="">
             <div class="block">
-              <p padlength="0" lo="400" lf="400">Activity - Magnetic Force on Wires</p>
+              <p padlength="0" lo="400" lf="400" class="active">Activity - Magnetic Force of a Moving Charge</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">400</span></div>
             </div>
             <div class="block">
               <ul lo="401" lf="405" class="compact">
-                <li markerlength="2" padlength="0" lo="401" lf="405">
+                <li markerlength="2" padlength="0" lo="401" lf="405" class="">
                   <div class="block">
-                    <p padlength="0" lo="401" lf="405">Documents: | <a href="Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge.pdf">pdf</a> | <a href="Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge-solutions.pdf">pdf solns</a> | <a href="Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge.html">html</a> |</p>
+                    <p padlength="0" lo="401" lf="405" class="">Documents: | <a href="Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge.pdf">pdf</a> | <a href="Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge-solutions.pdf">pdf solns</a> | <a href="Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge.html">html</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">401-405</span></div>
                   </div>
                 </li>
@@ -1976,9 +1971,9 @@ c-16-25.333-24-45-24-59z"></path>
               <div class="block-info" style="display: none;"><span class="line-numbers">401-405</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="406" lf="412">
+          <li markerlength="2" padlength="0" lo="406" lf="410" class="">
             <div class="block">
-              <p padlength="0" lo="406" lf="410">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Magnetic_Field_of_Moving_Charge">Github</a> | <a href="Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge.md!" target="_blank">Markdown</a> | </p>
+              <p padlength="0" lo="406" lf="410" class="">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Magnetic_Field_of_Moving_Charge">Github</a> | <a href="Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge.md">Markdown</a> | </p>
               <div class="block-info" style="display: none;"><span class="line-numbers">406-410</span></div>
             </div>
           </li>
@@ -1994,54 +1989,48 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="414" lf="414"><a name="magnetic-flux" number="4.23" lo="414" raw="## Magnetic Flux" class="anchor hanchor" href="#magnetic-flux"><span class="hnumber">4.23</span>&nbsp;<span class="htext">Magnetic Flux</span></a></h2>
+        <h2 lo="414" lf="414" class=""><a name="magnetic-flux" number="4.23" lo="414" raw="## Magnetic Flux" class="anchor hanchor" href="#magnetic-flux"><span class="hnumber">4.23</span>&nbsp;<span class="htext">Magnetic Flux</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">414</span></div>
       </div>
-    </div>
-    <div class="section">
       <div class="block">
-        <h2 lo="416" lf="416" class=""><a name="magnetic-field-of-a-moving-charge" number="4.24" lo="416" raw="## Magnetic Field of a Moving Charge" class="anchor hanchor" href="#magnetic-field-of-a-moving-charge"><span class="hnumber">4.24</span>&nbsp;<span class="htext">Magnetic Field of a Moving Charge</span></a></h2>
-        <div class="block-info" style="display: none;"><span class="line-numbers">416</span></div>
-      </div>
-      <div class="block">
-        <ul lo="418" lf="428" class="compact">
-          <li markerlength="2" padlength="0" lo="418" lf="423" class="">
+        <ul lo="416" lf="426" class="compact">
+          <li markerlength="2" padlength="0" lo="416" lf="421" class="">
             <div class="block">
-              <p padlength="0" lo="418" lf="418" class="">Activity - Magnetic Force on Wires</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">418</span></div>
+              <p padlength="0" lo="416" lf="416" class="">Activity - Magnetic Flux</p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">416</span></div>
             </div>
             <div class="block">
-              <ul lo="419" lf="423" class="compact">
-                <li markerlength="2" padlength="0" lo="419" lf="423" class="">
+              <ul lo="417" lf="421" class="compact">
+                <li markerlength="2" padlength="0" lo="417" lf="421" class="">
                   <div class="block">
-                    <p padlength="0" lo="419" lf="423" class="">Documents: | <a href="Magnetic_Flux/Magnetic_Flux.pdf">pdf</a> | <a href="Magnetic_Flux/Magnetic_Flux-solutions.pdf">pdf solns</a> | <a href="Magnetic_Flux/Magnetic_Flux.html">html</a> |</p>
-                    <div class="block-info" style="display: none;"><span class="line-numbers">419-423</span></div>
+                    <p padlength="0" lo="417" lf="421" class="">Documents: | <a href="Magnetic_Flux/Magnetic_Flux.pdf">pdf</a> | <a href="Magnetic_Flux/Magnetic_Flux-solutions.pdf">pdf solns</a> | <a href="Magnetic_Flux/Magnetic_Flux.html">html</a> |</p>
+                    <div class="block-info" style="display: none;"><span class="line-numbers">417-421</span></div>
                   </div>
                 </li>
               </ul>
-              <div class="block-info" style="display: none;"><span class="line-numbers">419-423</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">417-421</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="424" lf="428" class="">
+          <li markerlength="2" padlength="0" lo="422" lf="426" class="">
             <div class="block">
-              <p padlength="0" lo="424" lf="428" class="">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Magnetic_Flux">Github</a> | <a href="Magnetic_Flux/Magnetic_Flux.md">Markdown</a> | </p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">424-428</span></div>
+              <p padlength="0" lo="422" lf="426" class="">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Magnetic_Flux">Github</a> | <a href="Magnetic_Flux/Magnetic_Flux.md">Markdown</a> | </p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">422-426</span></div>
             </div>
           </li>
         </ul>
-        <div class="block-info" style="display: none;"><span class="line-numbers">418-428</span></div>
+        <div class="block-info" style="display: none;"><span class="line-numbers">416-426</span></div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="430" lf="430" class=""><a name="lenz-s-law" number="4.25" lo="430" raw="## Lenz's Law" class="anchor hanchor" href="#lenz-s-law"><span class="hnumber">4.25</span>&nbsp;<span class="htext">Lenz’s Law</span></a></h2>
-        <div class="block-info" style="display: none;"><span class="line-numbers">430</span></div>
+        <h2 lo="428" lf="428"><a name="lenz-s-law" number="4.24" lo="428" raw="## Lenz's Law" class="anchor hanchor" href="#lenz-s-law" lf="428"><span class="hnumber">4.24</span>&nbsp;<span class="htext">Lenz’s Law</span></a></h2>
+        <div class="block-info" style="display: none;"><span class="line-numbers">429</span></div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="432" lf="432"><a name="rlc-and-ac-circuits" number="4.26" lo="432" raw="## RLC and AC Circuits" class="anchor hanchor" href="#rlc-and-ac-circuits"><span class="hnumber">4.26</span>&nbsp;<span class="htext">RLC and AC Circuits</span></a></h2>
-        <div class="block-info" style="display: none;"><span class="line-numbers">432</span></div>
+        <h2 lo="430" lf="430"><a name="rlc-and-ac-circuits" number="4.25" lo="430" raw="## RLC and AC Circuits" class="anchor hanchor" href="#rlc-and-ac-circuits" lf="430"><span class="hnumber">4.25</span>&nbsp;<span class="htext">RLC and AC Circuits</span></a></h2>
+        <div class="block-info" style="display: none;"><span class="line-numbers">431</span></div>
       </div>
     </div>
   </div>
