--- a/Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge.html
+++ b/Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge.html
@@ -576,7 +576,7 @@
         </a>
       </li>
       <li>
-        <a href="#problem-iii" raw="# Problem III" lo="117" class="highlighted">
+        <a href="#problem-iii" raw="# Problem III" lo="117">
           <span class="toctext">Problem III</span>
         </a>
       </li>
@@ -799,9 +799,9 @@ c-16-25.333-24-45-24-59z"></path>
       </div>
       <div class="block">
         <div class="inline-html" lo="35" lf="38">
-          <div class="solutionstrue" style="display: block;">
+          <div class="solutionstrue">
           </div>
-          <div class="solutionsfalse" style="display: none;">
+          <div class="solutionsfalse">
             <div class="block">
               <div class="inline-html">
                 <div class="newpage">
@@ -1090,9 +1090,9 @@ c-16-25.333-24-45-24-59z"></path>
       </div>
       <div class="block">
         <div class="inline-html" lo="68" lf="71">
-          <div class="solutionstrue" style="display: block;">
+          <div class="solutionstrue">
           </div>
-          <div class="solutionsfalse" style="display: none;">
+          <div class="solutionsfalse">
             <div class="block">
               <div class="inline-html">
                 <div class="newpage">
@@ -1125,7 +1125,7 @@ c-16-25.333-24-45-24-59z"></path>
       </div>
       <div class="block">
         <div class="inline-html" lo="77" lf="100">
-          <div class="solutionstrue" style="display: block;">
+          <div class="solutionstrue">
             <div class="block">
               <p padlength="0"><strong type="md">Solution</strong></p>
             </div>
@@ -1317,7 +1317,7 @@ c-16-25.333-24-45-24-59z"></path>
                                     </svg></span></span></span></span></span></span></span><span class="mspace" style="margin-right:0.2222em;"></span><span class="mbin">×</span><span class="mspace" style="margin-right:0.2222em;"></span></span><span class="base"><span class="strut" style="height:0.7079em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7079em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">r</span></span><span style="top:-3.0134em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1944em;"><span class="mord">^</span></span></span></span></span></span></span></span></span></span> confirms that the result is into the page.</p>
             </div>
           </div>
-          <div class="solutionsfalse" style="display: none;">
+          <div class="solutionsfalse">
             <div class="block">
               <div style="width:100%">
                 <div class="tex" raw="\vspace{24em}" style="height:24em"></div>
@@ -1347,7 +1347,7 @@ c-16-25.333-24-45-24-59z"></path>
       </div>
       <div class="block">
         <div class="inline-html" lo="106" lf="110">
-          <div class="solutionstrue" style="display: block;">
+          <div class="solutionstrue">
             <div class="block">
               <p padlength="0"><strong type="md">Answer</strong>: <span len="18" raw="_\bfvec{B}(a,a)=0_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1.2191em;vertical-align:-0.25em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">B</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
                                       <path d="M377 20c0-5.333 1.833-10 5.5-14S391 0 397 0c4.667 0 8.667 1.667 12 5
@@ -1368,7 +1368,7 @@ c-16-25.333-24-45-24-59z"></path>
                                     </svg></span></span></span></span></span></span></span></span></span></span> and <span len="18" raw="_\hat{\mathbf{r}}_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7079em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7079em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">r</span></span><span style="top:-3.0134em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1944em;"><span class="mord">^</span></span></span></span></span></span></span></span></span></span> are parallel, so their cross product is zero.)</p>
             </div>
           </div>
-          <div class="solutionsfalse" style="display: none;">
+          <div class="solutionsfalse">
             <div class="block">
               <div style="width:100%">
                 <div class="tex" raw="\vspace{12em}" style="height:12em"></div>
@@ -1380,9 +1380,9 @@ c-16-25.333-24-45-24-59z"></path>
       </div>
       <div class="block">
         <div class="inline-html" lo="112" lf="115">
-          <div class="solutionstrue" style="display: block;">
+          <div class="solutionstrue">
           </div>
-          <div class="solutionsfalse" style="display: none;">
+          <div class="solutionsfalse">
             <div class="block">
               <div class="inline-html">
                 <div class="newpage">
@@ -1398,7 +1398,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="117" lf="117" class="highlighted"><a name="problem-iii" number="5" lo="117" raw="# Problem III" class="anchor hanchor" href="#problem-iii"><span class="hnumber">5</span>&nbsp;<span class="htext">Problem III</span></a></h1>
+        <h1 lo="117" lf="117"><a name="problem-iii" number="5" lo="117" raw="# Problem III" class="anchor hanchor" href="#problem-iii"><span class="hnumber">5</span>&nbsp;<span class="htext">Problem III</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">117</span></div>
       </div>
       <div class="block">
@@ -1414,8 +1414,8 @@ c-16-25.333-24-45-24-59z"></path>
         <div class="block-info" style="display: none;"><span class="line-numbers">119</span></div>
       </div>
       <div class="block">
-        <div class="inline-html active" lo="121" lf="126">
-          <div class="solutionstrue" style="display: block;">
+        <div class="inline-html" lo="121" lf="126">
+          <div class="solutionstrue">
             <div class="block">
               <p padlength="0"><strong type="md">Answer</strong>: <span len="71" raw="__\bfvec{B}(x,y)= \frac{\mu_o}{4\pi} \frac{2v_o\khat}{13\sqrt{13}a^2}__" class="katex-display fleqn"><span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1.2191em;vertical-align:-0.25em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">B</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
                                         <path d="M377 20c0-5.333 1.833-10 5.5-14S391 0 397 0c4.667 0 8.667 1.667 12 5
@@ -1441,7 +1441,7 @@ M834 80h400000v40h-400000z"></path>
                                                   </svg></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.1328em;"><span></span></span></span></span></span><span class="mord"><span class="mord mathnormal">a</span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7401em;"><span style="top:-2.989em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight">2</span></span></span></span></span></span></span></span></span></span><span style="top:-3.23em;"><span class="pstrut" style="height:3em;"></span><span class="frac-line" style="border-bottom-width:0.04em;"></span></span><span style="top:-3.677em;"><span class="pstrut" style="height:3em;"></span><span class="mord"><span class="mord">2</span><span class="mord"><span class="mord mathnormal" style="margin-right:0.03588em;">v</span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.1514em;"><span style="top:-2.55em;margin-left:-0.0359em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight">o</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.15em;"><span></span></span></span></span></span></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9579em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord"><span class="mord"><span class="mord boldsymbol" style="margin-right:0.01852em;">k</span></span></span></span><span style="top:-3.2634em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.25em;"><span class="mord">^</span></span></span></span></span></span></span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.93em;"><span></span></span></span></span></span><span class="mclose nulldelimiter"></span></span></span></span></span></span></p>
             </div>
           </div>
-          <div class="solutionsfalse" style="display: none;">
+          <div class="solutionsfalse">
             <div class="block">
               <div style="width:100%">
                 <div class="tex" raw="\vspace{18em}" style="height:18em"></div>
