--- a/index.html
+++ b/index.html
@@ -1956,14 +1956,14 @@ c-16-25.333-24-45-24-59z"></path>
         <ul lo="400" lf="410" class="compact">
           <li markerlength="2" padlength="0" lo="400" lf="405" class="">
             <div class="block">
-              <p padlength="0" lo="400" lf="400" class="active">Activity - Magnetic Force of a Moving Charge</p>
+              <p padlength="0" lo="400" lf="400" class="">Activity - Magnetic Force of a Moving Charge</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">400</span></div>
             </div>
             <div class="block">
               <ul lo="401" lf="405" class="compact">
                 <li markerlength="2" padlength="0" lo="401" lf="405" class="">
                   <div class="block">
-                    <p padlength="0" lo="401" lf="405" class="">Documents: | <a href="Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge.pdf">pdf</a> | <a href="Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge-solutions.pdf">pdf solns</a> | <a href="Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge.html">html</a> |</p>
+                    <p padlength="0" lo="401" lf="405" class="active">Documents: | <a href="Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge.pdf">pdf</a> | <a href="Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge-solutions.pdf">pdf solns</a> | <a href="Magnetic_Field_of_Moving_Charge/Magnetic_Field_of_Moving_Charge.html">html</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">401-405</span></div>
                   </div>
                 </li>
