--- a/index.html
+++ b/index.html
@@ -1929,7 +1929,7 @@ c-16-25.333-24-45-24-59z"></path>
               <ul lo="387" lf="391" class="compact">
                 <li markerlength="2" padlength="0" lo="387" lf="391" class="">
                   <div class="block">
-                    <p padlength="0" lo="387" lf="391" class="">Documents: | <a href="Magnetic_Force_and_Torque/Magnetic_Force_and_Torque.pdf">pdf</a> | <a href="Magnetic_Force_and_Torque/Magnetic_Force_and_Torque-solutions.pdf">pdf solns</a> | <a href="Magnetic_Force_and_Torque/Magnetic_Force_and_Torque.html">html</a> |</p>
+                    <p padlength="0" lo="387" lf="391" class="active">Documents: | <a href="Magnetic_Force_and_Torque/Magnetic_Force_and_Torque.pdf">pdf</a> | <a href="Magnetic_Force_and_Torque/Magnetic_Force_and_Torque-solutions.pdf">pdf solns</a> | <a href="Magnetic_Force_and_Torque/Magnetic_Force_and_Torque.html">html</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">387-391</span></div>
                   </div>
                 </li>
@@ -1939,7 +1939,7 @@ c-16-25.333-24-45-24-59z"></path>
           </li>
           <li markerlength="2" padlength="0" lo="392" lf="396" class="">
             <div class="block">
-              <p padlength="0" lo="392" lf="396" class="active">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Magnetic_Force_and_Torque">Github</a> | <a href="Magnetic_Force_and_Torque/Magnetic_Force_and_Torque.md">Markdown</a> | </p>
+              <p padlength="0" lo="392" lf="396" class="">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Magnetic_Force_and_Torque">Github</a> | <a href="Magnetic_Force_and_Torque/Magnetic_Force_and_Torque.md">Markdown</a> | </p>
               <div class="block-info" style="display: none;"><span class="line-numbers">392-396</span></div>
             </div>
           </li>
