--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
   <div id="toc" style="min-width: 5em;">
     <ol>
       <li>
-        <a href="#overview" raw="# Overview" lo="1" class="">
+        <a href="#overview" raw="# Overview" lo="1">
           <span class="toctext">Overview</span>
         </a>
       </li>
@@ -571,10 +571,10 @@
         </a>
       </li>
       <li>
-        <a href="#activities" raw="# Activities" lo="38" class="">
+        <a href="#activities" raw="# Activities" lo="38">
           <span class="toctext">Activities</span>
         </a>
-        <ol class="toc" style="display: block;">
+        <ol class="toc" style="display: none;">
           <li>
             <a href="#logarithm-review" raw="## Logarithm Review" lo="40">
               <span class="toctext">Logarithm Review</span>
@@ -682,12 +682,12 @@ c-16-25.333-24-45-24-59z"></path>
             </a>
           </li>
           <li>
-            <a href="#magnetic-force-on-charged-particles" raw="## Magnetic Force on Charged Particles" lo="369" class="">
+            <a href="#magnetic-force-on-charged-particles" raw="## Magnetic Force on Charged Particles" lo="369" class="highlighted">
               <span class="toctext">Magnetic Force on Charged Particles</span>
             </a>
           </li>
           <li>
-            <a href="#magnetic-force-and-torque" raw="## Magnetic Force and Torque" lo="384" class="highlighted">
+            <a href="#magnetic-force-and-torque" raw="## Magnetic Force and Torque" lo="384">
               <span class="toctext">Magnetic Force and Torque</span>
             </a>
           </li>
@@ -725,11 +725,11 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="1" lf="1" class=""><a name="overview" number="1" lo="1" raw="# Overview" class="anchor hanchor" href="#overview"><span class="hnumber">1</span>&nbsp;<span class="htext">Overview</span></a></h1>
+        <h1 lo="1" lf="1"><a name="overview" number="1" lo="1" raw="# Overview" class="anchor hanchor" href="#overview"><span class="hnumber">1</span>&nbsp;<span class="htext">Overview</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">1</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="3" lf="3" class="">These are activities that students work on during a weekly 50–minute recitation for PHYS 260 at GMU. To maximize students’ time working on problems, I typically give at most a 10–minute review. Often, my 10–minute review involves working through an example that is nearly identical to the first problem. If many students are stuck on a part of the problem, I will interrupt the class and have students guide to the answer.</p>
+        <p padlength="0" lo="3" lf="3">These are activities that students work on during a weekly 50–minute recitation for PHYS 260 at GMU. To maximize students’ time working on problems, I typically give at most a 10–minute review. Often, my 10–minute review involves working through an example that is nearly identical to the first problem. If many students are stuck on a part of the problem, I will interrupt the class and have students guide to the answer.</p>
         <div class="block-info" style="display: none;"><span class="line-numbers">3</span></div>
       </div>
       <div class="block">
@@ -805,7 +805,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="38" lf="38" class=""><a name="activities" number="4" lo="38" raw="# Activities" class="anchor hanchor" href="#activities"><span class="hnumber">4</span>&nbsp;<span class="htext">Activities</span></a></h1>
+        <h1 lo="38" lf="38"><a name="activities" number="4" lo="38" raw="# Activities" class="anchor hanchor" href="#activities"><span class="hnumber">4</span>&nbsp;<span class="htext">Activities</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">38</span></div>
       </div>
     </div>
@@ -1875,14 +1875,14 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="369" lf="369" class=""><a name="magnetic-force-on-charged-particles" number="4.19" lo="369" raw="## Magnetic Force on Charged Particles" class="anchor hanchor" href="#magnetic-force-on-charged-particles"><span class="hnumber">4.19</span>&nbsp;<span class="htext">Magnetic Force on Charged Particles</span></a></h2>
+        <h2 lo="369" lf="369" class="highlighted"><a name="magnetic-force-on-charged-particles" number="4.19" lo="369" raw="## Magnetic Force on Charged Particles" class="anchor hanchor" href="#magnetic-force-on-charged-particles"><span class="hnumber">4.19</span>&nbsp;<span class="htext">Magnetic Force on Charged Particles</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">369</span></div>
       </div>
       <div class="block">
         <ul lo="371" lf="382" class="compact">
           <li markerlength="2" padlength="0" lo="371" lf="384">
             <div class="block">
-              <p padlength="0" lo="371" lf="371" class="">Activity - Magnetic Force on Charged Particles</p>
+              <p padlength="0" lo="371" lf="371">Activity - Magnetic Force on Charged Particles</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">371</span></div>
             </div>
             <div class="block">
@@ -1895,13 +1895,13 @@ c-16-25.333-24-45-24-59z"></path>
                 </li>
                 <li markerlength="2" padlength="0" lo="373" lf="377">
                   <div class="block">
-                    <p padlength="0" lo="373" lf="377">Documents: | <a href="Magnetic_Force/Magnetic_Force.pdf">pdf</a> | <a href="Magnetic_Force/Magnetic_Force-solutions.pdf">pdf solns</a> | <a href="Magnetic_Force/Magnetic_Force.html">html</a> |</p>
+                    <p padlength="0" lo="373" lf="377" class="active">Documents: | <a href="Magnetic_Force/Magnetic_Force.pdf">pdf</a> | <a href="Magnetic_Force/Magnetic_Force-solutions.pdf">pdf solns</a> | <a href="Magnetic_Force/Magnetic_Force.html">html</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">373-377</span></div>
                   </div>
                 </li>
                 <li markerlength="2" padlength="0" lo="378" lf="384">
                   <div class="block">
-                    <p padlength="0" lo="378" lf="382">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/(Magnetic_Force">Github</a> | <a href="Magnetic_Force/Magnetic_Force.md!" target="_blank">Markdown</a> |</p>
+                    <p padlength="0" lo="378" lf="382" class="">Source Files: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/(Magnetic_Force">Github</a> | <a href="Magnetic_Force/Magnetic_Force.md!" target="_blank">Markdown</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">378-382</span></div>
                   </div>
                 </li>
@@ -1915,21 +1915,21 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="384" lf="384" class="highlighted"><a name="magnetic-force-and-torque" number="4.20" lo="384" raw="## Magnetic Force and Torque" class="anchor hanchor" href="#magnetic-force-and-torque"><span class="hnumber">4.20</span>&nbsp;<span class="htext">Magnetic Force and Torque</span></a></h2>
+        <h2 lo="384" lf="384"><a name="magnetic-force-and-torque" number="4.20" lo="384" raw="## Magnetic Force and Torque" class="anchor hanchor" href="#magnetic-force-and-torque"><span class="hnumber">4.20</span>&nbsp;<span class="htext">Magnetic Force and Torque</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">384</span></div>
       </div>
       <div class="block">
         <ul lo="386" lf="396" class="compact">
-          <li markerlength="2" padlength="0" lo="386" lf="391" class="">
+          <li markerlength="2" padlength="0" lo="386" lf="391">
             <div class="block">
-              <p padlength="0" lo="386" lf="386" class="">Activity - Magnetic Force and Torque</p>
+              <p padlength="0" lo="386" lf="386">Activity - Magnetic Force and Torque</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">386</span></div>
             </div>
             <div class="block">
               <ul lo="387" lf="391" class="compact">
-                <li markerlength="2" padlength="0" lo="387" lf="391" class="">
+                <li markerlength="2" padlength="0" lo="387" lf="391">
                   <div class="block">
-                    <p padlength="0" lo="387" lf="391" class="active">Documents: | <a href="Magnetic_Force_and_Torque/Magnetic_Force_and_Torque.pdf">pdf</a> | <a href="Magnetic_Force_and_Torque/Magnetic_Force_and_Torque-solutions.pdf">pdf solns</a> | <a href="Magnetic_Force_and_Torque/Magnetic_Force_and_Torque.html">html</a> |</p>
+                    <p padlength="0" lo="387" lf="391">Documents: | <a href="Magnetic_Force_and_Torque/Magnetic_Force_and_Torque.pdf">pdf</a> | <a href="Magnetic_Force_and_Torque/Magnetic_Force_and_Torque-solutions.pdf">pdf solns</a> | <a href="Magnetic_Force_and_Torque/Magnetic_Force_and_Torque.html">html</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">387-391</span></div>
                   </div>
                 </li>
@@ -1937,9 +1937,9 @@ c-16-25.333-24-45-24-59z"></path>
               <div class="block-info" style="display: none;"><span class="line-numbers">387-391</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="392" lf="396" class="">
+          <li markerlength="2" padlength="0" lo="392" lf="398">
             <div class="block">
-              <p padlength="0" lo="392" lf="396" class="">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Magnetic_Force_and_Torque">Github</a> | <a href="Magnetic_Force_and_Torque/Magnetic_Force_and_Torque.md">Markdown</a> | </p>
+              <p padlength="0" lo="392" lf="396">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Magnetic_Force_and_Torque">Github</a> | <a href="Magnetic_Force_and_Torque/Magnetic_Force_and_Torque.md!" target="_blank">Markdown</a> | </p>
               <div class="block-info" style="display: none;"><span class="line-numbers">392-396</span></div>
             </div>
           </li>
